# django-course

./: .gitignore  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/templates/articles/: index.html
hexlet_django_blog/templates/: base.html  index.html
hexlet_django_blog/templates/articles/: article.html  comment.html  create.html  delete.html  index.html  update.html
