[tool.poetry]
name = "django-course"
version = "0.1.0"
description = ""
authors = ["avolosevich <sashkevich23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
